// Vitest Snapshot v1

exports[`Run config bundle > cjs structure 1`] = `null`;

exports[`Run config bundle > dist structure 1`] = `
{
  "files": [
    {
      "name": "index.esm.es2017.production.js",
    },
    {
      "name": "index.esm.es5.production.js",
    },
  ],
  "name": "dist",
}
`;

exports[`Run config bundle > es2017 structure 1`] = `null`;

exports[`Run config bundle > esm structure 1`] = `null`;

exports[`Run config bundle-full > cjs structure 1`] = `null`;

exports[`Run config bundle-full > dist structure 1`] = `
{
  "files": [
    {
      "name": "index.cjs.es2017.production.js",
    },
    {
      "name": "index.cjs.es5.production.js",
    },
    {
      "name": "index.esm.es2017.production.js",
    },
    {
      "name": "index.esm.es5.production.js",
    },
    {
      "name": "index.umd.es2017.production.js",
    },
    {
      "name": "index.umd.es5.production.js",
    },
  ],
  "name": "dist",
}
`;

exports[`Run config bundle-full > es2017 structure 1`] = `null`;

exports[`Run config bundle-full > esm structure 1`] = `null`;

exports[`Run config bundle-with-dev-mode > cjs structure 1`] = `null`;

exports[`Run config bundle-with-dev-mode > dist structure 1`] = `
{
  "files": [
    {
      "name": "index.esm.es2017.development.js",
    },
    {
      "name": "index.esm.es5.development.js",
    },
  ],
  "name": "dist",
}
`;

exports[`Run config bundle-with-dev-mode > es2017 structure 1`] = `null`;

exports[`Run config bundle-with-dev-mode > esm structure 1`] = `null`;

exports[`Run config bundle-with-empty-mode > cjs structure 1`] = `null`;

exports[`Run config bundle-with-empty-mode > dist structure 1`] = `
{
  "files": [],
  "name": "dist",
}
`;

exports[`Run config bundle-with-empty-mode > es2017 structure 1`] = `null`;

exports[`Run config bundle-with-empty-mode > esm structure 1`] = `null`;

exports[`Run config bundle-with-full-modes > cjs structure 1`] = `null`;

exports[`Run config bundle-with-full-modes > dist structure 1`] = `
{
  "files": [
    {
      "name": "index.esm.es2017.development.js",
    },
    {
      "name": "index.esm.es2017.production.js",
    },
    {
      "name": "index.esm.es5.development.js",
    },
    {
      "name": "index.esm.es5.production.js",
    },
  ],
  "name": "dist",
}
`;

exports[`Run config bundle-with-full-modes > es2017 structure 1`] = `null`;

exports[`Run config bundle-with-full-modes > esm structure 1`] = `null`;

exports[`Run config default > cjs structure 1`] = `null`;

exports[`Run config default > dist structure 1`] = `null`;

exports[`Run config default > es2017 structure 1`] = `
{
  "files": [
    {
      "name": "index.d.ts",
    },
    {
      "name": "index.js",
    },
  ],
  "name": "es2017",
}
`;

exports[`Run config default > esm structure 1`] = `
{
  "files": [
    {
      "name": "index.d.ts",
    },
    {
      "name": "index.js",
    },
  ],
  "name": "esm",
}
`;

exports[`Run config no-declaration > cjs structure 1`] = `null`;

exports[`Run config no-declaration > dist structure 1`] = `null`;

exports[`Run config no-declaration > es2017 structure 1`] = `
{
  "files": [
    {
      "name": "index.js",
    },
  ],
  "name": "es2017",
}
`;

exports[`Run config no-declaration > esm structure 1`] = `
{
  "files": [
    {
      "name": "index.js",
    },
  ],
  "name": "esm",
}
`;

exports[`Run config sourcemap-enable > cjs structure 1`] = `null`;

exports[`Run config sourcemap-enable > dist structure 1`] = `null`;

exports[`Run config sourcemap-enable > es2017 structure 1`] = `
{
  "files": [
    {
      "name": "index.d.ts",
    },
    {
      "name": "index.js",
    },
    {
      "name": "index.js.map",
    },
  ],
  "name": "es2017",
}
`;

exports[`Run config sourcemap-enable > esm structure 1`] = `
{
  "files": [
    {
      "name": "index.d.ts",
    },
    {
      "name": "index.js",
    },
    {
      "name": "index.js.map",
    },
  ],
  "name": "esm",
}
`;

exports[`Run config sourcemap-inline > cjs structure 1`] = `null`;

exports[`Run config sourcemap-inline > dist structure 1`] = `null`;

exports[`Run config sourcemap-inline > es2017 structure 1`] = `
{
  "files": [
    {
      "name": "index.d.ts",
    },
    {
      "name": "index.js",
    },
  ],
  "name": "es2017",
}
`;

exports[`Run config sourcemap-inline > esm structure 1`] = `
{
  "files": [
    {
      "name": "index.d.ts",
    },
    {
      "name": "index.js",
    },
  ],
  "name": "esm",
}
`;

exports[`Run config sourcemap-inline > file content es2017/index.d.ts 1`] = `
"export declare const foo = 1;
"
`;

exports[`Run config sourcemap-inline > file content es2017/index.js 1`] = `
"export const foo = 1;

//# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbIi4vc3JjL2luZGV4LnRzIl0sInNvdXJjZXNDb250ZW50IjpbImV4cG9ydCBjb25zdCBmb28gPSAxXG4iXSwibmFtZXMiOlsiZm9vIl0sIm1hcHBpbmdzIjoiQUFBQSxPQUFPLE1BQU1BLE1BQU0sRUFBQyJ9"
`;

exports[`Run config sourcemap-inline > file content esm/index.d.ts 1`] = `
"export declare const foo = 1;
"
`;

exports[`Run config sourcemap-inline > file content esm/index.js 1`] = `
"export var foo = 1;

//# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbIi4vc3JjL2luZGV4LnRzIl0sInNvdXJjZXNDb250ZW50IjpbImV4cG9ydCBjb25zdCBmb28gPSAxXG4iXSwibmFtZXMiOlsiZm9vIl0sIm1hcHBpbmdzIjoiQUFBQSxPQUFPLElBQU1BLE1BQU0sRUFBQyJ9"
`;
